# SDL_ttf_simple

./: CMakeLists.txt  README.txt
